Sun Jan 17 14:42:25 2016  Kuniaki IGARASHI  <igaiga@gmail.com>

	* test/ruby/test_env.rb: [Fix GH-1201]
	  * Extract test code for ENV#delete_if from ENV#reject_bang
	  * Add a test case for ENV#reject_bang,delete_if

Sun Jan 17 14:40:22 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (check_size): extract a macro to check
	  binary data size, with a consistent message.

	* ext/socket/option.c (sockopt_byte): fix error message,
	  sizeof(int) differs from sizeof(unsigned char) in general.

Sat Jan 16 21:16:21 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (xstring): reset heredoc indent after dedenting,
	  so that following string literal would not be dedented.
	  [ruby-core:72857] [Bug #11990]

Sat Jan 16 17:24:24 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* enc/unicode.c: Artificial mapping to test buffer expansion code.
	* string.c: Fixed buffer expansion logic.
	* test/ruby/enc/test_case_mapping.rb: Tests for above.
	  (with Kimihito Matsui)

Sat Jan 16 16:47:14 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* ext/openssl/lib/openssl/pkey.rb: Added 2048 bit DH parameter.
	* test/openssl/test_pkey_dh.rb: ditto.

Sat Jan 16 10:51:19 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* enc/unicode.c: fix implicit conversion error with clang. fixup r53548.
	* string.c: ditto.

Sat Jan 16 10:31:00 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* common.mk: test-sample was changed to test-basic.
	  [Feature #11982][ruby-core:72823]
	* basictest/runner.rb: ditto. rename from tool/rubytest.rb.
	* basictest/test.rb: ditto. rename from sample/test.rb.
	* defs/gmake.mk: picked from r53540
	* sample/test.rb: backward compatibility for chkbuild.

Sat Jan 16 10:23:23 2016  Martin Duerst  <duerst@it.aoyama.ac.jp>

	* string.c, enc/unicode.c: New code path as a preparation for Unicode-wide
	  case mapping. The code path is currently guarded by the :lithuanian
	  option to avoid accidental problems in daily use.